--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@angular/cli": "^12.2.10",
+    "@angular/compiler-cli": "^12.2.10",
+    "typescript": "~4.3.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.10",
-    "@angular/cli": "~12.2.10",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular/cli": "^12.2.10",
+    "@angular/compiler-cli": "^12.2.10",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "enhanced-resolve": "^5.8.3",
@@ -40,7 +43,7 @@
     "typescript": "~4.3.5"
   },
   "engines": {
-    "node": "12.16.1",
-    "npm": "6.13.4"
+    "node": "12.18.2",
+    "npm": "6.14.5"
   }
 }
